# ETL-Data-Pipeline-on-Google-Cloud

./: .gitignore  Crawling.ipynb  Extract.ipynb  Tranforms.ipynb  architecture_diagram.md  architecture_diagram_cloudrun.md  batdongsan.csv  batdongsan1.csv  batdongsan_clean.csv  import requests.py  main.tf  mogi_links.csv  pyproject.toml  requirements.txt
ETL/: Extract.ipynb  Tranforms.ipynb
Test/: Tran.ipynb
data/: batdongsan_clean.csv  mogi_links.csv
scr/: batdongsan_nhadat.csv  extract.ipynb  mogi_links.csv  tranform.ipynb
terraform/: main.tf
